--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.sql.init.mode=never
 # Show SQL statements in console (optional, for debugging)
 spring.jpa.show-sql=true
 
+server.port=8081
+
 
 logging.level.org.springframework.web=DEBUG
 spring.servlet.multipart.max-file-size=5MB
